--- a/literature.adoc
+++ b/literature.adoc
@@ -4,9 +4,6 @@ Literatura
 * http://reprap.org[RepRap wiki]
 * http://sdu.ictp.it/3d/book.html[Open kniha "Low-cost 3D Printing for
 Science, Education and Sustainable Development"]
-* http://3dprint.fit.cvut.cz[Stránky 3DPrintFIT]
-* https://github.com/3DprintFIT[Náš GitHub]
+* https://www.packtpub.com/product/3d-printing-with-reprap-cookbook/9781782169888[3D Printing with RepRap Cookbook]
+* https://nostarch.com/programmingopenscad[Programming with OpenSCAD]
 * http://www.thingiverse.com[Thingiverse], stránka s 3D objekty
-* http://www.stratasys.com/3d-printers/technologies[Stratasys
-technologie], stránka společnosti Stratasys s popisem některých
-technologií
