--- a/tutorials/index.adoc
+++ b/tutorials/index.adoc
@@ -18,7 +18,7 @@ xref:reprap#[RepRap], xref:git#[Git]
 |4. |13.03.2023 |xref:mesh#[Mesh]
 |https://github.com/3DprintFIT/B222A-Mesh-Assignment[3]
 
-|5. |20.03.2023 |xref:admesh#[ADMesh] - Programová manipulace s meshí
+|5. |20.03.2023 |xref:admesh#[ADMesh] – Programová manipulace s meshí
 |https://github.com/3DprintFIT/B222A-ADMesh-Assignment[3]
 
 |6. |27.03.2023 |xref:scan#[Skenování]
