--- a/tasks.adoc
+++ b/tasks.adoc
@@ -1,5 +1,5 @@
 = Zadání
 
 - Zadání úloh na cvičení najdete na stránce xref:tutorials/index#[Cvičení].
-- Zadání domácího úkolu: https://github.com/3DprintFIT/B222HW-Assignment[B222HW-Assignment]
-- Zadání semestrální práce: https://github.com/3DprintFIT/B222CW-Assignment[B222CW-Assignment]
+- Zadání domácího úkolu: 🚧
+- Zadání semestrální práce: 🚧
