--- a/tutorials/index.adoc
+++ b/tutorials/index.adoc
@@ -5,37 +5,37 @@ Změna programu vyhrazena.
 [cols="s,2,4,",options="header",]
 |=======================================================================
 |Cvičení |Datum |Téma |Body
-|1. |20.02.2023 |xref:course#[Principy předmětu],
+|1. |19.02.2024 |xref:course#[Principy předmětu],
 xref:reprap#[RepRap], xref:git#[Git], xref:openscad#[OpenSCAD: Lehký úvod]
-|https://github.com/3DprintFIT/B222A-Username-Assignment[0]
+|https://github.com/3DprintFIT/B232-Username-Assignment[0]
 
-|2. |27.02.2023 |xref:openscad#[OpenSCAD: Základy]
-|https://github.com/3DprintFIT/B222A-OpenSCAD1-Assignment[3]
+|2. |26.02.2024 |xref:openscad#[OpenSCAD: Základy]
+|https://github.com/3DprintFIT/B232-OpenSCAD1-Assignment[3]
 
-|3. |06.03.2023 |xref:openscad#[OpenSCAD: Pokročilé]
-|https://github.com/3DprintFIT/B222A-OpenSCAD2-Assignment[3]
+|3. |04.03.2024 |xref:openscad#[OpenSCAD: Pokročilé]
+|https://github.com/3DprintFIT/B232-OpenSCAD2-Assignment[3]
 
-|4. |13.03.2023 |xref:mesh#[Mesh] – 🖱️  s sebou
-|https://github.com/3DprintFIT/B222A-Mesh-Assignment[3]
+|4. |11.03.2024 |xref:mesh#[Mesh] – 🖱️  s sebou
+|https://github.com/3DprintFIT/B232-Mesh-Assignment[3]
 
-|5. |20.03.2023 |xref:admesh#[ADMesh] – Programová manipulace s meshí
-|https://github.com/3DprintFIT/B222A-ADMesh-Assignment[3]
+|5. |18.03.2024 |xref:admesh#[ADMesh] – Programová manipulace s meshí
+|https://github.com/3DprintFIT/B232-ADMesh-Assignment[3]
 
-|6. |27.03.2023 |xref:scan#[Skenování]
-|https://github.com/3DprintFIT/B222A-Scanning-Assignment[3]
+|6. |25.03.2024 |xref:scan#[Skenování]
+|https://github.com/3DprintFIT/B232-Scanning-Assignment[3]
 
-|7. |03.04.2023 |xref:slicing#[Slicing]
-|https://github.com/3DprintFIT/B222A-Slicing-Assignment[3]
+|7. |08.04.2024 |xref:slicing#[Slicing]
+|https://github.com/3DprintFIT/B232-Slicing-Assignment[3]
 
-|8. |06.04.2023 🐤 čtvrtek |xref:printing#[Tisk: Základy] |3
+|8. |15.04.2024 |xref:printing#[Tisk: Základy] |3
 
-|9. |17.04.2023 |xref:bridges#[Tisk: Mosty] |3
+|9. |22.04.2024 |xref:bridges#[Tisk: Mosty] |3
 
-|10. |24.04.2023 |xref:supports#[Tisk: Podpory] |3
+|10. |29.04.2024 |xref:supports#[Tisk: Podpory] |3
 
-|11. |02.05.2023 ⚒️ úterý |xref:multicolor#[Tisk: Vícebarevný tisk] |3
+|11. |06.05.2024 |xref:multicolor#[Tisk: Vícebarevný tisk] |3
 
-|12. |15.05.2023 |Tisk - co si přejete vyzkoušet ohledně semestrální práce |0
+|12. |13.05.2024 |Tisk - co si přejete vyzkoušet ohledně semestrální práce |0
 
 2+d|Domácí příprava vhodná k semestrálce
 |xref:meshmixer#[MeshMixer a řezání STL souborů] |0
