--- a/tutorials/index.adoc
+++ b/tutorials/index.adoc
@@ -21,7 +21,7 @@ xref:reprap#[RepRap], xref:git#[Git], xref:openscad#[OpenSCAD: Lehký úvod]
 |5. |18.03.2024 |xref:admesh#[ADMesh] – Programová manipulace s meshí
 |https://github.com/3DprintFIT/B232-ADMesh-Assignment[3]
 
-|6. |25.03.2024 |xref:scan#[Skenování]
+|6. |25.03.2024 |xref:scan#[Skenování] (nebo Fusion)
 |https://github.com/3DprintFIT/B232-Scanning-Assignment[3]
 
 |7. |08.04.2024 |xref:slicing#[Slicing]
