--- a/tutorials/index.adoc
+++ b/tutorials/index.adoc
@@ -18,8 +18,8 @@ xref:reprap#[RepRap], xref:git#[Git], xref:openscad#[OpenSCAD: Lehký úvod]
 |4. |11.03.2024 |xref:mesh#[Mesh] – 🖱️  s sebou
 |https://github.com/3DprintFIT/B232A-Mesh-Assignment[3]
 
-|5. |18.03.2024 |Fusion 360
-|https://github.com/3DprintFIT/B232A-Fusion-Assignment[3]
+|5. |18.03.2024 |xref:fusion#[Fusion 360] – 🖱️  s sebou
+|3
 
 |6. |25.03.2024 |xref:admesh#[ADMesh] – Programová manipulace s meshí
 |https://github.com/3DprintFIT/B232A-ADMesh-Assignment[3]
