Move stuff around

--- a/tutorials/admesh.adoc
+++ b/tutorials/admesh.adoc
@@ -74,6 +74,37 @@ $ make
 $ export ADMESHDIR=~/admesh
 $ make install DESTDIR=$ADMESHDIR
 
+Pro kompilaci zdrojového kódu do programu je třeba linkeru říct,
+že chceme použít knihovnu ADMesh, a předat kompilátoru cestu k hlavičkovému souboru a knihovně:
+
+.Kompilace programu používajícího knihovnu ADMesh z vlastního adresáře
+[source,console]
+$ export ADMESHDIR=~/admesh
+$ gcc -L$ADMESHDIR/usr/local/lib/ -I$ADMESHDIR/usr/local/include/ source.c -o myapp -ladmesh
+
+.Spuštění zkompilovaného programu s knihovnou z vlastního adresáře
+[source,console]
+$ LD_LIBRARY_PATH=$ADMESHDIR/usr/local/lib/ ./myapp 
+
+=== Instalace a kompilace ADMesh na macOS
+
+Pro instalaci využijeme Homebrew. Pokud nemáte nainstalovaný, nainstalujte ho podle návodu na https://brew.sh/
+
+.Instalace ADMesh
+[source,console]
+$ brew install admesh
+
+Pro kompilaci zdrojového kódu do programu je třeba linkeru říct,
+že chceme použít knihovnu ADMesh, a předat kompilátoru cestu k hlavičkovému souboru a knihovně:
+
+.Kompilace programu používajícího knihovnu ADMesh na macOS
+[source,console]
+$ gcc -L/opt/homebrew/lib/ -I/opt/homebrew/include/ source.c -o myapp -ladmesh
+
+.Spuštění zkompilovaného programu na macOS
+[source,console]
+$ ./myapp
+
 === Základní použití
 
 Pro použití knihovny stačí naincludovat hlavičkový soubor `admesh/stl.h`:
@@ -153,25 +184,6 @@ $ LD_LIBRARY_PATH=$ADMESHDIR/usr/local/lib/ ./myapp
 .Pro použití vlastního sestavení na macOS je nutné nastavit `DYLD_LIBRARY_PATH`
 [source,console]
 $ DYLD_LIBRARY_PATH=$ADMESHDIR/usr/local/lib/ ./myapp
-
-=== Instalace a kompilace ADMesh na macOS
-
-Pro instalaci využijeme Homebrew. Pokud nemáte nainstalovaný, nainstalujte ho podle návodu na https://brew.sh/
-
-.Instalace ADMesh
-[source,console]
-$ brew install admesh
-
-Pro kompilaci zdrojového kódu do programu je třeba linkeru říct,
-že chceme použít knihovnu ADMesh, a předat komplilátoru cestu k hlavičkovému souboru a knihovně:
-
-.Kompilace programu používajícího knihovnu ADMesh na macOS
-[source,console]
-$ gcc -L/opt/homebrew/lib/ -I/opt/homebrew/include/ source.c -o myapp -ladmesh
-
-.Spuštění zkompilovaného programu na macOS
-[source,console]
-$ ./myapp 
 
 
 === Práce se strukturou `stl_file`
