misc: add self (PS) as teacher

--- a/cs/teachers/index.adoc
+++ b/cs/teachers/index.adoc
@@ -6,6 +6,7 @@ Obě cvičení::
 
 Na předmětu se dále podílejí a vypomáhají členové laboratoře::
   * Marek Reimer
+  * Patrik Svoboda
 
 Kontaktní informace::
   * Telefon do labu: +420 224 358 714
